deploy/k8s/overlays/staging/services-nodeport-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: NodePort
  ports:
    - name: http
      port: 8501
      targetPort: 8501
      nodePort: 30851
